<resources>
    <string name="app_name">MyApplication</string>
    <string name="action_settings">Settings</string>

    <string name="str_btn_start_easy">EASY</string>
    <string name="str_btn_start_normal">NORMAL</string>
    <string name="str_btn_start_hard">HARD</string>
    <string name="str_btn_start_lunatic">LUNATIC</string>

    <string name="str_btn_retry">Retry</string>
    <string name="str_btn_back">Back</string>
    <string name="str_btn_pause">Pause</string>
    <string name="str_btn_resume">Resume</string>
    <string name="str_btn_back_to_menu">Back to Menu</string>

    <string name="str_count_down_3">3</string>
    <string name="str_count_down_2">2</string>
    <string name="str_count_down_1">1</string>
    <string name="str_count_down_go">Go!</string>

    <string name="str_wrong_click_penalty_time">+10s</string>
    <string name="str_show_score_default">Score: ---</string>
    <string name="str_timer_default">0.00</string>
    <string name="str_the_number_game_title">The Number Game</string>
</resources>
